rendered/envs/alpha/starbase80/deployment-starbase80.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    a8r.io/repository: https://github.com/Zebradil/myks-homelab
  name: starbase80
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: starbase80
  template:
    metadata:
      annotations:
        checksum/config: 7c875f1009000365f8e5934c45345b54
      labels:
        app.kubernetes.io/name: starbase80
    spec:
      containers:
        - image: index.docker.io/library/nginx@sha256:05b8cb60c354a44ab824ea6e7dc69b46d50762cdbe728a347a5b656e6fb3d7c4
          name: server
          ports:
            - containerPort: 80
              name: http
          securityContext:
            allowPrivilegeEscalation: false
            capabilities:
              add:
                - NET_BIND_SERVICE
                - CHOWN
                - SETGID
                - SETUID
              drop:
                - all
            privileged: false
          volumeMounts:
            - mountPath: /usr/share/nginx/html
              name: static
              readOnly: true
      volumes:
        - emptyDir: {}
          name: static
        - configMap:
            name: config
          name: config
