rendered/envs/alpha/starbase80/ingressroute-starbase80-vpn.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  annotations:
    a8r.io/repository: https://github.com/Zebradil/myks-homelab
  name: starbase80-vpn
spec:
  entryPoints:
    - vpn-web
    - vpn-websecure
  routes:
    - kind: Rule
      match: Host(`starbase80.ts.zebradil.dev`) || Host(`starbase80.junior.ts.zebradil.dev`)
      services:
        - name: starbase80
          port: http
