rendered/envs/alpha/starbase80/ingressroute-starbase80.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  annotations:
    a8r.io/repository: https://github.com/Zebradil/myks-homelab
  name: starbase80
spec:
  routes:
    - kind: Rule
      match: Host(`starbase80.zebradil.dev`) || Host(`starbase80.ts.zebradil.dev`) || Host(`starbase80.junior.zebradil.dev`) || Host(`starbase80.junior.ts.zebradil.dev`)
      middlewares:
        - name: chain-authelia-auth
          namespace: authelia
      services:
        - name: starbase80
          port: http
